<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.auth.enter_pin_code.EnterPinCodeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_found_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:gravity="center"
        android:textAppearance="@style/SansationRegularAppearence"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Привет, Сергей!" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/pin_code_label"
        android:textAppearance="@style/SansationLightAppearence"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_found_name" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:itemBackground="@drawable/otp_item_bg"
        android:textAppearance="@style/SansationLightAppearence"
        android:textColor="@color/black"
        app:OtpItemCount="4"
        app:OtpItemSpacing="@dimen/_18sdp"
        app:OtpLineColor="@android:color/transparent"
        app:OtpViewType="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_text"
        tools:text="23" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/forgot_pin_code"
        android:textAppearance="@style/SansationLightAppearence"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_view" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/help_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:text="@string/pin_code_desc_text"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/forgot_pin"/>

</androidx.constraintlayout.widget.ConstraintLayout>